tests/snapshots/note-out-of-range-low.loom.snap
---
source: tests/error_test.rs
expression: error_trace
---
loom::compiler::context

  × while compiling track 'Track'
  ├─▶ while compiling pattern line in track sequence
  ├─▶ while compiling pattern block emission
  ╰─▶ MIDI note out of range: -76 (expected 0..127) for 'C0' at track 'Track', track sequence, block 0, leaf 0
