tests/snapshots/seq-basic.loom.snap
---
source: tests/examples_test.rs
expression: events
---
[
    TrackEvent {
        track: "Lead",
        event: Note {
            time: 0.0,
            duration: 1.0,
            channel: 0,
            note: 72,
            velocity: 80,
        },
    },
    TrackEvent {
        track: "Lead",
        event: Note {
            time: 1.0,
            duration: 1.0,
            channel: 0,
            note: 74,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Lead",
        event: Note {
            time: 2.0,
            duration: 1.0,
            channel: 0,
            note: 76,
            velocity: 120,
        },
    },
    TrackEvent {
        track: "Lead",
        event: Note {
            time: 4.0,
            duration: 0.33333333333333304,
            channel: 0,
            note: 79,
            velocity: 40,
        },
    },
    TrackEvent {
        track: "Lead",
        event: Note {
            time: 4.0,
            duration: 0.33333333333333304,
            channel: 0,
            note: 83,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Lead",
        event: Note {
            time: 4.333333333333333,
            duration: 0.3333333333333339,
            channel: 0,
            note: 86,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Lead",
        event: Note {
            time: 4.666666666666667,
            duration: 0.33333333333333304,
            channel: 0,
            note: 88,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Lead",
        event: Note {
            time: 6.0,
            duration: 2.0,
            channel: 0,
            note: 84,
            velocity: 100,
        },
    },
]
